[package]
edition = "2021"
name = "stay-away-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", features = ["alloc"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = {version = "1", features = ["full"]}
warp = "0.3"
